--- a/.github/workflows/go-docker-test.yml
+++ b/.github/workflows/go-docker-test.yml
@@ -21,8 +21,8 @@ jobs:
       uses: docker-practice/actions-setup-docker@0.0.1
     
     - name: setup go linters
-      run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.24.0
-      
+      run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.24.0
+  
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
