[feat][iaac] terraform template for k8s boilerplate
fixes: #16

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 
 #stuff needed for docker image build
 /image-context
+
+#terraform init
+**/.terraform/*
+# .tfstate files
+*.tfstate
+*.tfstate.*
