[refactot][daemonset] forward amazon logs for collector by default

--- a/kubernetes-environment/kube-manifests/daemonset.yaml
+++ b/kubernetes-environment/kube-manifests/daemonset.yaml
@@ -18,7 +18,7 @@ spec:
             path: /home/ubuntu/.ssh
         - name: host-log-input
           hostPath:
-            path: /var/log
+            path: /var/log/amazon
         - name: host-log-output
           hostPath:
             path: /home/ubuntu/admin-backdoor
