--- a/kubernetes-environment/ansible/group_vars/all.yaml
+++ b/kubernetes-environment/ansible/group_vars/all.yaml
@@ -5,10 +5,14 @@ daemonset_path: path/to/daemonset/template
 
 # Kubeadm
 cluster_name:
-master_ip: "{{ hostvars[groups['k8s-boilerplate-masters'][0]]['ansible_default_ipv4'].address }}"
+# local apiserver advertise addr
+master_internal_ip: "{{ hostvars[groups['k8s-boilerplate-masters'][0]]['ansible_default_ipv4'].address }}"
+# needed to generate publicly available kubeconfig
+master_public_ip: "{{ hostvars[inventory_hostname].groups['k8s-boilerplate-masters'][0] }}"
 kubeadm_token: 783bde.3f89s0fje9f38fhf
 kubeadmin_config: /etc/kubernetes/admin.conf
 kubeadm_dir: /root/kubeadm_configuration
+public_kubeconfig_path: "{{ lookup('env','PWD') }}/kubeconfig-public.yaml"
 
 # CNI
 network_dir: k8s-network-templates
